--- a/pages/19964.html
+++ b/pages/19964.html
@@ -309,7 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
@@ -901,9 +901,21 @@ margin-left: 0em;
 </div>
 </div>
 
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#history'>History</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
-<p>A <em>Skyrmion</em> is a kind of <a class="existingWikiWord" href="/nlab/show/instanton">instanton</a>/<a class="existingWikiWord" href="/nlab/show/soliton">soliton</a> in certain <a class="existingWikiWord" href="/nlab/show/gauge+field+theories">gauge field theories</a>.</p>
+<p>A <em>Skyrmion</em> is a kind of <a class="existingWikiWord" href="/nlab/show/instanton">instanton</a>/<a class="existingWikiWord" href="/nlab/show/soliton">soliton</a> in certain <a class="existingWikiWord" href="/nlab/show/gauge+field+theories">gauge field theories</a>. The concept exists quite generally (see <a href="#RhoZahed16">Rho-Zahed 16</a>), but its original use (<a href="#Skyrme62">Skyrme 62</a>), and still one of the most important ones, is as a model for <em><a class="existingWikiWord" href="/nlab/show/baryons">baryons</a></em> in a putative theory of <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-perturbative</a> <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a>, the formulation of the latter being by and large an open problem (due to <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>, see <a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a>).</p>
+
+<p>The Skyrmion model of baryons was rediscovered in the <a class="existingWikiWord" href="/nlab/show/Witten-Sakai-Sugimoto+model">Witten-Sakai-Sugimoto model</a> for <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-perturbative</a> <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>, where it becomes equivalent to a model of <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> by <a class="existingWikiWord" href="/nlab/show/wrapped+brane">wrapped</a> <a class="existingWikiWord" href="/nlab/show/D4-branes">D4-branes</a> in an <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+model">intersecting D-brane model</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -927,18 +939,28 @@ margin-left: 0em;
 
 <h2 id="history">History</h2>
 
-<p>From <a href="#RhoZahed10">Rho-Zahed 10, Preface</a></p>
+<p>From <a href="#RhoZahed10">Rho-Zahed 10, Preface</a>:</p>
 
 <blockquote>
-<p>Two path-breaking developments took place consecutively in physics in the years 1983 and 1984: First in nuclear physics with the rediscovery of Skyrme’s seminal idea on the structure of baryons and then a ‘revolution’ in string theory in the following year. One of us (Gerald E. Brown) edited a volume entitled Selected Papers, with Commentary, of Tony Hilton Royle Skyrme in 1994, recounting how at that time the most unconventional idea of Skyrme that fermionic baryons could emerge as topological solitons from π-meson cloud was confirmed in the context of quantum chromodynamics (QCD) in the large number-of-color (Nc) limit. It also confirmed how the solitonic structure of baryons, in particular, the nucleons, reconciled nuclear physics— which had been making an impressive progress phenomenologically, aided mostly by experiments — with QCD, the fundamental theory of strong interactions. Immediately after the rediscovery of what is now generically called “skyrmion” came the first string theory revolution which then took most of the principal actors who played the dominant role in reviving the skyrmion picture away from that problem and swept them into the mainstream of string theory reaching out to a much higher energy scale. This was in some sense unfortunate for the skyrmion model <em>per se</em> but fortunate for nuclear physics, for it was then mostly nuclear theorists who picked up what was left behind in the wake of the celebrated string revolution and proceeded to uncover fascinating novel aspects of nuclear structure which otherwise would have eluded physicists, notably concepts such as the ‘Cheshire Cat phenomenon’ in hadronic dynamics.</p>
+<p>Two path-breaking developments took place consecutively in physics in the years 1983 and 1984: First in nuclear physics with the rediscovery of Skyrme’s seminal idea on the structure of baryons and then a <a href="string+theory#ReferencesHistory">“revolution” in string theory</a> in the following year.</p>
 
-<p>What has taken place since 1983 is a beautiful story in physics. It has not only profoundly influenced nuclear physics — which was Skyrme’s original aim — but also brought to light hitherto unforseen phenomena in other areas of physics, such as condensed matter physics, astrophysics and string theory.</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>⋯</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[\cdots]</annotation></semantics></math> at that time the most unconventional idea of Skyrme that <a class="existingWikiWord" href="/nlab/show/fermion">fermionic</a> <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> could emerge as topological <a class="existingWikiWord" href="/nlab/show/solitons">solitons</a> from <a class="existingWikiWord" href="/nlab/show/%CF%80-meson">π-meson</a> cloud was confirmed in the context of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> (QCD) in the large number-of-<a class="existingWikiWord" href="/nlab/show/color+charge">color</a> (<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>N</mi> <mi>c</mi></msub></mrow><annotation encoding="application/x-tex">N_c</annotation></semantics></math>) limit. It also confirmed how the solitonic structure of <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a>, in particular, the <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>, reconciled nuclear physics — which had been making an impressive progress <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenologically</a>, aided mostly by <a class="existingWikiWord" href="/nlab/show/experiments">experiments</a> — with <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>, the fundamental theory of <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong interactions</a>. Immediately after the rediscovery of what is now generically called “skyrmion” came the <a href="string+theory#ReferencesHistory">first string theory revolution</a> which then took most of the principal actors who played the dominant role in reviving the skyrmion picture away from that problem and swept them into the mainstream of <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> reaching out to a much higher <a class="existingWikiWord" href="/nlab/show/energy">energy</a> <a class="existingWikiWord" href="/nlab/show/scale">scale</a>. This was in some sense unfortunate for the skyrmion model <em>per se</em> but fortunate for nuclear physics, for it was then mostly nuclear theorists who picked up what was left behind in the wake of the celebrated string revolution and proceeded to uncover fascinating novel aspects of nuclear structure which otherwise would have eluded physicists, notably concepts such as the ‘Cheshire Cat phenomenon’ in hadronic dynamics.</p>
+
+<p>What has taken place since 1983 is a beautiful story in <a class="existingWikiWord" href="/nlab/show/physics">physics</a>. It has not only profoundly influenced nuclear physics — which was Skyrme’s original aim — but also brought to light hitherto unforseen phenomena in other areas of physics, such as <a class="existingWikiWord" href="/nlab/show/condensed+matter+physics">condensed matter physics</a>, <span class="newWikiWord">astrophysics<a href="/nlab/new/astrophysics">?</a></span> and <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>.</p>
 </blockquote>
 
 <h2 id="references">References</h2>
 
+<p>The original article is</p>
+
 <ul>
-<li id="RhoZahed10">M. Rho, Ismail Zahed (eds.) <em>The Multifaceted Skyrmion</em>, World Scientific 2016 (<a href="https://doi.org/10.1142/9710">arXiv:10.1142/9710</a>)</li>
+<li id="Skyrme62">Tony Skyrme, <em>A unified field theory of mesons and baryons</em>, Nuclear Physics Volume 31, March–April 1962, Pages 556-569 (<a href="https://doi.org/10.1016/0029-5582(62)90775-7">doi:10.1016/0029-5582(62)90775-7</a>)</li>
+</ul>
+
+<p>Fruther developments and review:</p>
+
+<ul>
+<li id="RhoZahed16">M. Rho, Ismail Zahed (eds.) <em>The Multifaceted Skyrmion</em>, World Scientific 2016 (<a href="https://doi.org/10.1142/9710">doi:10.1142/9710</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -952,7 +974,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 06:54:48.
+  Last revised on December  3, 2018 at 07:47:54.
   See the <a href="https://ncatlab.org/nlab/history/skyrmion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
