--- a/pages/19973.html
+++ b/pages/19973.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      B meson in nLab
+      flavour (particle physics) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      B meson
+      flavour (particle physics)
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9187/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9340/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,203 +309,17 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<div class="rightHandSide">
-<div class="toc clickDown" tabindex="0">
-<h3 id="context">Context</h3>
-
-<h4 id="fields_and_quanta">Fields and quanta</h4>
-
-<div class="hide"><div>
-
-<p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/photon">photon</a> - <a class="existingWikiWord" href="/nlab/show/electromagnetic+field">electromagnetic field</a> (abelian <a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/W-boson">W</a>, <a class="existingWikiWord" href="/nlab/show/Z-boson">Z</a>, <a class="existingWikiWord" href="/nlab/show/B-boson">B-boson</a> - <a class="existingWikiWord" href="/nlab/show/electroweak+field">electroweak field</a> (<a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gluon">gluon</a> - <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong nuclear force</a> (<a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/graviton">graviton</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/infraparticle">infraparticle</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Higgs+boson">Higgs boson</a>, <a class="existingWikiWord" href="/nlab/show/inflaton">inflaton</a> (<a class="existingWikiWord" href="/nlab/show/scalar+field">scalar field</a>)</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/electron">electron</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/neutrino">neutrino</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/muon">muon</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/baryon">baryon</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/proton">proton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/neutron">neutron</a></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
-
-<p>bosinos:</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gravitino">gravitino</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> (<a class="existingWikiWord" href="/nlab/show/Rarita-Schwinger+field">Rarita-Schwinger field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gaugino">gaugino</a> - <a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills field</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gluino">gluino</a></p>
-</li>
-</ul>
-
-<p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/squark">squark</a></li>
-</ul>
-
-<p><strong>Exotica</strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/preon">preon</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/axion">axion</a>, <a class="existingWikiWord" href="/nlab/show/dilaton">dilaton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/monopole">monopole</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/antifield">antifield</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/antighost+field">antighost field</a>, <a class="existingWikiWord" href="/nlab/show/Nakanishi-Lautrup+field">Nakanishi-Lautrup field</a></p>
-</li>
-</ul>
-</div></div>
-</div>
-</div>
-
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
-
-<h2 id="idea">Idea</h2>
-
-<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> a <em>B-meson</em> is a <a class="existingWikiWord" href="/nlab/show/meson">meson</a> which is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of two (anti-)<a class="existingWikiWord" href="/nlab/show/bottom+quarks">bottom quarks</a> (whence “B”).</p>
-
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/flavour+anomaly">flavour anomaly</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/flavour+anomaly">flavour anomaly</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/color+charge">color charge</a></p>
 </li>
 </ul>
 
@@ -514,7 +328,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/B_meson">B meson</a></em></li>
+<li>Wikipedia, <a href="https://en.wikipedia.org/wiki/Flavour_(particle_physics)">Flavour (particle physcs)</a></li>
 </ul>
 </body></html>
 
@@ -522,22 +336,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 07:15:58.
-  See the <a href="https://ncatlab.org/nlab/history/B meson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December  3, 2018 at 07:23:50.
+  See the <a href="https://ncatlab.org/nlab/history/flavour (particle physics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/B+meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/B+meson/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/B+meson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/B+meson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/B meson/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/flavour+%28particle+physics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/flavour (particle physics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/B+meson" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/flavour+%28particle+physics%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/B+meson" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/flavour+%28particle+physics%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/B+meson" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/flavour+%28particle+physics%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
