--- a/pages/6322.html
+++ b/pages/6322.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -321,7 +321,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -333,7 +338,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -885,15 +896,26 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="algebraic_qunantum_field_theory">Algebraic Qunantum Field Theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
 </li>
@@ -901,7 +923,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -957,7 +983,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometric+quantization">geometric quantization</a><a class="existingWikiWord" href="/nlab/show/geometric+quantization+of+symplectic+groupoids">of symplectic groupoids</a></p>
 </li>
@@ -965,7 +995,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+deformation+quantization">algebraic deformation quantization</a>, <a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/subsystem">subsystem</a></p>
 </li>
@@ -1065,7 +1099,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/picture+of+quantum+mechanics">picture of quantum mechanics</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a>, <a class="existingWikiWord" href="/nlab/show/Moyal+deformation+quantization">Moyal deformation quantization</a></p>
 </li>
@@ -1087,7 +1125,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Fock+space">Fock space</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+symmetry">gauge symmetry</a></p>
 </li>
@@ -1115,7 +1157,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+anomaly">gauge anomaly</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative AQFT</a></p>
 </li>
@@ -1177,7 +1223,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/renormalization+scheme">("re-")normalization scheme</a></p>
 
@@ -1235,7 +1285,13 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="Theorems">Theorems</h2><h3 id="states_and_observables">States and observables</h3><ul>
+</ul>
+
+<h2 id="Theorems">Theorems</h2>
+
+<h3 id="states_and_observables">States and observables</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/order-theoretic+structure+in+quantum+mechanics">order-theoretic structure in quantum mechanics</a></p>
 
@@ -1277,7 +1333,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kadison-Singer+problem">Kadison-Singer problem</a></p>
 </li>
-</ul><h3 id="operator_algebra">Operator algebra</h3><ul>
+</ul>
+
+<h3 id="operator_algebra">Operator algebra</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Wick%27s+theorem">Wick's theorem</a></p>
 </li>
@@ -1305,7 +1365,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Haag%27s+theorem">Haag's theorem</a></p>
 </li>
-</ul><h3 id="local_qft">Local QFT</h3><ul>
+</ul>
+
+<h3 id="local_qft">Local QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Reeh-Schlieder+theorem">Reeh-Schlieder theorem</a></p>
 </li>
@@ -1329,7 +1393,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> (<a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>)</p>
 </li>
-</ul><h3 id="perturbative_qft">Perturbative QFT</h3><ul>
+</ul>
+
+<h3 id="perturbative_qft">Perturbative QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Schwinger-Dyson+equation">Schwinger-Dyson equation</a></p>
 </li>
@@ -1337,7 +1405,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -1365,7 +1434,13 @@ margin-left: 0em;
 <h2 id="properties">Properties</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a></p>
+</li>
 </ul>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -1408,7 +1483,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/instanton+in+QCD">instanton in QCD</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/colour+charge">colour charge</a>, <a class="existingWikiWord" href="/nlab/show/flavour+%28particle+physics%29">flavour (particle physics)</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/instanton+in+QCD">instanton in QCD</a>, <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a>, <a class="existingWikiWord" href="/nlab/show/skyrmion">skyrmion</a></p>
 </li>
 
 <li>
@@ -1525,14 +1604,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 12:53:35.
+  Last revised on December  3, 2018 at 07:29:05.
   See the <a href="https://ncatlab.org/nlab/history/QCD" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/QCD/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
